# pykegg

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml
docs/: conf.py  drawing-global-map.ipynb  example_analysis.rst  index.rst  modules.rst  pykegg-intro.ipynb  pykegg-parallel-edges.ipynb  pykegg.KGML_graph.rst  pykegg.rst  pykegg.utils.rst  requirements.txt  single-cell-example.ipynb  usage.rst  use-with-pydeseq2.ipynb  vis-multiple-enrichment.ipynb
docs/_static/: custom.css
docs/source/: example_analysis.rst  index.rst  modules.rst  pykegg.rst  references.rst  usage.rst
recipe/: meta.yaml
src/: pykegg.py  utils.py
src/pykegg/: KGML_graph.py  __init__.py  utils.py
