[project]
name = "pykegg"
version = "0.0.1"
authors = [
  { name="Noriaki Sato", email="nori@hgc.jp" },
]
description = "Visualizing and analyzing KEGG information in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/noriakis/pykegg"
"Bug Tracker" = "https://github.com/noriakis/pykegg/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"